Fixed overflow issue
Included an overflow:hidden to the working area and overflow:auto to the results, thus when a result is longer it shows a scroll but the height of the body stays the same.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 #WorkArea {
 	display: flex;
 	flex: 1;
+	overflow: hidden;
 }
 
 #INPUT {
@@ -18,6 +19,7 @@ body {
 
 #OUTPUT {
 	flex: 2;
+	overflow: auto;
 }
 
 #outputTable {
